Testing adding an endpoint.
